Wrote code to popup a dialog with photo upload rules.

--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -477,3 +477,5 @@ li.cl-indent {
     word-wrap: break-word;
 }
 
+/* the following is used for hiding the "X" (close icon) in the top right corner of dialog boxes. */
+.hide-x-close .ui-dialog-titlebar-close {display: none }
