Updated photo rules, and added code that will show photo rules popup whenever administrator doesn't approve a photo that someone has attempted to upload.

--- a/rs/templates/user_main_helpers/photo_rules.html
+++ b/rs/templates/user_main_helpers/photo_rules.html
@@ -2,30 +2,32 @@
 
 <strong>{{ app_name }} {% trans "Rules:" %}</strong>
 <ul>
+    <li>{% trans 'Photos that are not marked as private are public and visible to everyone'%}.
 
 {% if ADULT_ORIENTED_SITE %}
 
     {% if build_name == "swinger_build" or build_name == "gay_build" %}
-        <li>{% trans "No nude photos in public. Allowed in private." %}
+        <li>{% trans "No nude photos in public" %}.
+        <li>{% trans "Allowed in private" %}.
     {% else %}
-        <li>{% trans "No nude photos in public. Allowed in private. No genitals." %}
+        <li>{% trans "No nude photos in public" %}.
+        <li>{% trans "Allowed in private no genitals" %}.
     {% endif %}
 
 
 {% else %}
 
-    <li>{% trans "No pornographic or nude photos allowed." %}
+    <li>{% trans "No pornographic or nude photos allowed" %}.
 
 
 {% endif %}
-    <li>{% trans "Only authorized people will have access to your private photos." %}
-    <li>{% trans 'Photos that are not marked as private are "public" and visible to everyone'%}.
+    <li>{% trans "Only authorized people will have access to your private photos" %}.
     <li>{% trans "Public photos may show up in search engines such as Google"%}.
     <li>
         {% trans "Read - command verb" %}
         <a href="{% url views.terms %}">{% trans "Terms and conditions" %}</a>
         {% trans "for the rules of" %} {{ app_name }}.
-    <li>{% trans "Photos that do not follow the rules will be erased without notification." %}
+    <li>{% trans "Photos that do not follow the rules will be erased without notification" %}.
 
 </ul>
 
