Minor language fixes

--- a/rs/templates/user_main_helpers/photo_rules.html
+++ b/rs/templates/user_main_helpers/photo_rules.html
@@ -25,7 +25,7 @@
     <li>{% trans "Public photos may show up in search engines such as Google"%}.
     <li>
         {% trans "Read - command verb" %}
-        <a href="{% url views.terms %}">{% trans "Terms and conditions" %}</a>
+        <a href="{% url views.terms %}">{% trans "terms and conditions" %}</a>
         {% trans "for the rules of" %} {{ app_name }}.
     <li>{% trans "Photos that do not follow the rules will be erased without notification" %}.
 
