--- a/rs/templates/user_main_helpers/paypal_button.html
+++ b/rs/templates/user_main_helpers/paypal_button.html
@@ -50,7 +50,7 @@
             <input type="hidden" name="item_name" value='{{ app_name }} {% trans "VIP Membership" %}'>
             <input type="hidden" name="lc" value="{{ paypal_data.language }}"> <!-- Language code -->
 
-            <input type="hidden" name="currency_code" value="EUR">
+            <input type="hidden" name="currency_code" value="{{ paypal_data.currency_code }}">
             <table>
                 <tr><td><input type="hidden" name="on0" value="VIP"></td></tr><tr><td>
                 <select name="os0">
