Initial revision of modifications to PayPal buttons to use dialog boxes with radio buttons instead of dropdown menus.

--- a/rs/templates/main_container.html
+++ b/rs/templates/main_container.html
@@ -29,7 +29,7 @@
 
 {% include "common_helpers/logo_banner.html" %}
 {% include "user_main_helpers/search_inline_javascript.html" %}
-
+{% include "user_main_helpers/translation_helper.html" %}
 
 <script type="text/javascript">
 $(document).ready(function() {
