--- a/rs/templates/user_main_helpers/test_vip_benefits_dialog.html
+++ b/rs/templates/user_main_helpers/test_vip_benefits_dialog.html
@@ -25,11 +25,10 @@
 
         <p>
         {% blocktrans %}
-        VIP members are always shown the online status of other members. You can purchase VIP status by clicking on the button below.
+        VIP members are always shown the online status of other members.
         {% endblocktrans %}
         </p>
 
-        {{ paypal_button }}
 
         <p>
         <a class="cl-dialog_anchor cl-see_all_vip_benefits" href="#">{% trans "See VIP benefits" %}</a>
@@ -110,22 +109,20 @@ function show_all_vip_benefits_dialog() {
     return false;
 }
 
-$(document).ready(function() {
+function show_paypal_purchase_dialog() {
+    var $dialog = $("#id-show_paypal_purchase_dialog");
 
-    $('#id-show_online_status_menu_element').click(function() {
-        return show_online_status_main_dialog();
+    $dialog.dialog({
+        width: '500px',
+        title : $("#id-show_paypal_purchase_dialog_title").text()
     });
+    $dialog.dialog('open');
+    // prevent the default action, e.g., following a link
+    return false;
+}
 
 
-    $('#id-show_online_status_button').button();
-    $('#id-show_online_status_button').click(function(){
-        show_online_status_button_click_dialog();
-    });
 
-    $(document).on("click",'.cl-see_all_vip_benefits', function(e) {
-        show_all_vip_benefits_dialog();
-        e.preventDefault();
-    })
 
-});
+
 </script>
