Payment related - renamed some files, modified a bit of css, and moved some code into a new function so that we can process both paypal and fortumo payments in the same function.

--- a/rs/static/css/user_main.css
+++ b/rs/static/css/user_main.css
@@ -38,9 +38,9 @@ table#id-mail-header
 	padding: 3px;
 	vertical-align: middle;
     border-width: 1px;
-	border-color: gray;
+	border-color: #bbb;
 	border-style: solid;
-	background-color:  #e3e3e3;
+	background-color:  #eee;
     margin-right: 3px;
     margin-left: 3px;
     margin-top: 3px;
