--- a/rs/templates/user_main_helpers/fortumo_purchase_form.html
+++ b/rs/templates/user_main_helpers/fortumo_purchase_form.html
@@ -1,8 +1,10 @@
 {% load i18n %}
 
-        <form action="https://www.fortumo.com/mobile_payments/{{ fortumo_data.service_id }}" method="get" target="_blank">
-            <p>
-            {{ fortumo_data.radio_options|safe }}
-            <p>
-            <input class="cl-paypal-purchase" type="submit" name="submit" value='{% trans "Purchase" %}'>
-        </form>
+    <form action="#" method="get">
+        <p>
+        {{ fortumo_data.radio_options|safe }}
+        <p>
+        <input class="cl-paypal-purchase cl-fortumo_purchase" type="submit" name="submit" value='{% trans "Purchase" %}'>
+    </form>
+
+
