Fixed duplicate importing of payment buttons (was imported once at bottom of the screen, and again for popup dialog). Now it is imported only once, and if necessary we use javascript to import the html into the dialog popup.

--- a/rs/templates/user_main_helpers/become_a_vip.html
+++ b/rs/templates/user_main_helpers/become_a_vip.html
@@ -27,6 +27,9 @@
 ################################################################################
 -->
 
+<div id="id-become_a_vip">
+
+
  {% if SHOW_VIP_UPGRADE_OPTION %}
 
     <div class="cl-left-text cl-text-large-format">
@@ -50,3 +53,5 @@
     </div> <!-- end grid_9 -->
 
 {% endif %}
+
+</div>
