--- a/rs/templates/user_main_helpers/purchase_buttons.html
+++ b/rs/templates/user_main_helpers/purchase_buttons.html
@@ -57,10 +57,10 @@
 </div>
 
 <script type="text/javascript" language="javascript">
-$(function() {
+    $('.cl-paypal-purchase').button();
+
     $(document).ready(function() {
         $( ".cl-payment_tabs" ).tabs();
     });
-});
 </script>
         
