Minor tweaks to payment pricing, as well as added a warning message to html output if payment country is being over-ridden.

--- a/rs/templates/user_main_helpers/fortumo_purchase_form.html
+++ b/rs/templates/user_main_helpers/fortumo_purchase_form.html
@@ -1,5 +1,9 @@
 {% load i18n %}
 
+{% if fortumo_data.country_override %}
+        <h1>Warning - Fortumo country override to {{ fortumo_data.country_override }}</h1>
+{% endif %}
+
     <form action="#" method="get">
         <p>
         {{ fortumo_data.radio_options|safe }}
