--- a/rs/templates/user_main_helpers/paypal_purchase_form.html
+++ b/rs/templates/user_main_helpers/paypal_purchase_form.html
@@ -1,5 +1,8 @@
 {% load i18n %}
 
+{% if paypal_data.country_override %}
+        <h1>Warning - PayPal country override to {{ paypal_data.country_override }}</h1>
+{% endif %}
 
 {% if paypal_data.testing_paypal_sandbox %}
 
