--- a/rs/static/css/Menubar_common.css
+++ b/rs/static/css/Menubar_common.css
@@ -29,13 +29,13 @@ way to fit your requirements.
 
 /* Default list styling */
 
-#rs-nav li .cl-show_sub
+#rs-nav li ul.cl-show_sub
 {left:1px; top:24px; padding:3px; border-width: 0px 2px 2px 2px; border-style: solid; white-space:nowrap; width:180px; height:auto; z-index:300;}
 
-#rs-nav li .cl-show_sub li
+#rs-nav li ul.cl-show_sub li
 {display:block; height:20px;  float:left; width:180px; font-weight:normal;}
 
-#rs-nav li .cl-show_sub li a
+#rs-nav li ul.cl-show_sub li a
 {display:block; font-size:13px; height:18px; width:178px; line-height:18px; text-indent:5px; text-decoration:none; }
 
 #rs-nav li ul.cl-show_sub ul.cl-show_sub
