--- a/rs/static/css/menubar_common.css
+++ b/rs/static/css/menubar_common.css
@@ -3,7 +3,7 @@ This copyright notice must be kept untouched in the stylesheet at
 all times.
 
 The original version of this stylesheet and the associated (x)html
-is available at http://www.stunicholls.com/menu/pro_drop_2.html
+is available at http://www.stunicholls.com/menu/pro_dropdown_2.html
 Copyright (c) 2005-2007 Stu Nicholls. All rights reserved.
 This stylesheet and the associated (x)html may be modified in any 
 way to fit your requirements.
@@ -28,9 +28,12 @@ way to fit your requirements.
 
 
 /* Default list styling */
+/* The following rule moves the sub-menus way off the screen (ie. hidden) so that they will not be seen until the menu is clicked.  */
+#rs-nav li ul
+{position:absolute; left:-9999px; top:-9999px; padding:3px; border-width: 0px 2px 2px 2px; border-style: solid; white-space:nowrap; width:180px; height:auto; list-style:none; z-index:300;}
 
 #rs-nav li ul.cl-show_sub
-{left:1px; top:24px; padding:3px; border-width: 0px 2px 2px 2px; border-style: solid; white-space:nowrap; width:180px; height:auto; z-index:300;}
+{left:1px; top:24px;}
 
 #rs-nav li ul.cl-show_sub li
 {display:block; height:20px;  float:left; width:180px; font-weight:normal;}
@@ -41,7 +44,5 @@ way to fit your requirements.
 #rs-nav li ul.cl-show_sub ul.cl-show_sub
 {left:180px; top:-4px; padding:3px; white-space:nowrap; width:180px; z-index:400; height:auto;}
 
-/* The following rule moves the sub-menus way off the screen (ie. hidden) so that they will not be seen until the parent is clicked.  */
-#rs-nav ul
-{position:absolute; left:-9999px; top:-9999px; width:0; height:0; margin:0; padding:0; list-style:none;}
+
 
