--- a/rs/templates/main_container.html
+++ b/rs/templates/main_container.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
         <!-- the following code is used for displaying the search bar. -->
         <div class="cl-clear" id="id-debugging-main-1b"></div>
         <div class="grid_12 cl-center-text cl-content-background">
-            <div id="id-search-container" class="cl-center-text">
+            <div id="id-search-container" class="cl-center-text cl-gray-box">
                 {% include "user_main_helpers/simple_search_form.html" %}
             </div>
             <!-- end searchcontainer-->
