Made "support" email address more generic and not strictly dependent on the domain name .. this was needed since we will be sending ILikeLanguages notification and registration emails from iLikeLanguages@Lexabit.com instead of from the ILIkeLanguages domain ..

--- a/rs/templates/common_helpers/footer.html
+++ b/rs/templates/common_helpers/footer.html
@@ -30,7 +30,7 @@
 <div class="grid_12 cl-footer" id="id-footer">
     <div class="grid_6 alpha cl-left-text info-link-footer-format">
         <div class="cl-padding-5px">
-            &copy; 2010 <a href="http://{{ company_www }}">{{ company_name }}</a> - support@{{ app_name }}.com
+            &copy; 2010 <a href="http://{{ company_www }}">{{ company_name }}</a> - {{ support_email_address }}
         </div>
     </div>
 
